# AI-LLM

./: .gitignore
Agentops/: .env.example  README.md  config.py  main.py  requirements.txt
Agentops/agents/: content_creator.py  trend_searcher.py
Agentops/utils/: monitoring.py  web_utils.py
Agents/Phidata/phidata/: app.py  financial_agent.py  pdfassitant.py  play.py
BambooAI/: app.py
GoanGPT/: gpt.py  test.py
Listing products/: listproduct.ipynb  listproduct.py
MCQ Generator/: app.py
Multilingual Customer Service AI Agent/: README.md  app.py  requirements.txt  test.py  test2.py  test_app.py
ai assitant/: app.py
anime character/: app.py
crewai/day01/: README.md  pyproject.toml
crewai/day01/src/day01/: crew.py  main.py  report.md
crewai/day01/src/day01/config/: agents.yaml  tasks.yaml
image genai/: app.py  demo.py
learn japanese/: nihongo.py
manga/: app.py  require.txt  test1.py  test2.py  test3.py
manga-creator/: package-lock.json  package.json
manga-creator/app/: page.js
ocr/: app.py
rag_agent/: app.py  recepie_rag.ipynb
