[project]
name = "day01"
version = "0.1.0"
description = "day01 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
day01 = "day01.main:run"
run_crew = "day01.main:run"
train = "day01.main:train"
replay = "day01.main:replay"
test = "day01.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
